--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "./node_modules/vite/bin/vite.js",
+    "build": "tsc && ./node_modules/vite/bin/vite.js build",
+    "preview": "./node_modules/vite/bin/vite.js preview"
   },
   "dependencies": {
     "@biconomy/core-types": "^2.0.1",
     "@biconomy/smart-account": "^2.0.1",
     "@biconomy/web3-auth": "^2.0.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "browserify-zlib": "^0.2.0",
     "ethers": "5.7.2",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
